--- a/testActiveMQ/说明文档.md
+++ b/testActiveMQ/说明文档.md
@@ -35,3 +35,13 @@
 ###MessageListener</h3>
 **消息监听器**：如果注册了消息监听器，一旦消息到达，将自动调用监听器的onMessage方法。EJB中的MDB（Message-Driven Bean）就是一种MessageListener。
 
+##什么情况下使用ActiveMQ?
+1.多个项目之间集成  
+   (1) 跨平台  
+   (2) 多语言  
+   (3) 多项目  
+2.降低系统间模块的耦合度，解耦  
+   软件扩展性  
+3.系统前后端隔离  
+   前后端隔离，屏蔽高安全区
+
